crates/openehr-serde/tests/snapshots/full_rm_canonical_json__CAPABILITY.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "CAPABILITY",
  "name": {
    "_type": "DV_TEXT",
    "value": "prescribing"
  },
  "archetype_node_id": "at0007",
  "credentials": {
    "_type": "ITEM_TREE",
    "name": {
      "_type": "DV_TEXT",
      "value": "credentials"
    },
    "archetype_node_id": "at0008"
  }
}
