crates/openehr-serde/tests/snapshots/full_rm_canonical_json__CLUSTER.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "CLUSTER",
  "name": {
    "_type": "DV_TEXT",
    "value": "blood pressure"
  },
  "archetype_node_id": "at0001",
  "items": [
    {
      "_type": "ELEMENT",
      "name": {
        "_type": "DV_TEXT",
        "value": "inner"
      },
      "archetype_node_id": "at0002",
      "value": {
        "_type": "DV_TEXT",
        "value": "v"
      }
    }
  ]
}
