crates/openehr-serde/tests/snapshots/full_rm_canonical_json__DATE_TIME.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "value": "2026-07-02T10:00:00Z"
}
