crates/openehr-serde/tests/snapshots/full_rm_canonical_json__DURATION.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "value": "P1DT2H"
}
