crates/openehr-serde/tests/snapshots/full_rm_canonical_json__DV_BOOLEAN.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "DV_BOOLEAN",
  "value": true
}
