crates/openehr-serde/tests/snapshots/full_rm_canonical_json__DV_CODED_TEXT.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "DV_CODED_TEXT",
  "value": "event",
  "defining_code": {
    "_type": "CODE_PHRASE",
    "terminology_id": {
      "_type": "TERMINOLOGY_ID",
      "value": "openehr"
    },
    "code_string": "433"
  }
}
